[gd_scene load_steps=9 format=2]

[ext_resource path="res://boid/boid.gd" type="Script" id=1]
[ext_resource path="res://boid/blink.gd" type="Script" id=2]
[ext_resource path="res://boid/assets/eye.png" type="Texture" id=3]
[ext_resource path="res://audio/SoundEffect.tscn" type="PackedScene" id=4]
[ext_resource path="res://audio/sfx/boid.ogg" type="AudioStream" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 40.0

[sub_resource type="Animation" id=2]
resource_name = "swim"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ -8.0, 8.0 ]
}

[sub_resource type="Animation" id=3]
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.4, 1.5, 1.7 ),
"transitions": PoolRealArray( 1, 2, 0.5, 1 ),
"update": 0,
"values": [ Vector2( -1, 1 ), Vector2( -1, 1 ), Vector2( -1, 0 ), Vector2( -1, 1 ) ]
}

[node name="Boid" type="KinematicBody2D" groups=[
"boid",
]]
collision_layer = 0
collision_mask = 524288
script = ExtResource( 1 )
transition_duration = 0.65
alignment_force = 0.5
cohesion_force = 0.4
avoidance_force = 0.7
follow_force = 1.3
move_speed = 400.0
acceleration = 20.0

[node name="View" type="Area2D" parent="."]
collision_layer = 524288
collision_mask = 524288

[node name="CollisionShape2D" type="CollisionShape2D" parent="View"]
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Sprite" type="Sprite" parent="."]
light_mask = 0
rotation = -0.139626

[node name="Swim" type="AnimationPlayer" parent="Sprite"]
autoplay = "swim"
anims/swim = SubResource( 2 )
script = ExtResource( 2 )

[node name="Eye" type="Sprite" parent="Sprite"]
rotation = 3.14159
scale = Vector2( -1, 1 )
texture = ExtResource( 3 )

[node name="Blink" type="AnimationPlayer" parent="Sprite/Eye"]
autoplay = "blink"
anims/blink = SubResource( 3 )
script = ExtResource( 2 )

[node name="GlowTween" type="Tween" parent="."]

[node name="TransitionTimer" type="Timer" parent="."]
wait_time = 0.7

[node name="Blub" parent="." instance=ExtResource( 4 )]
stream = ExtResource( 5 )
volume_db = -12.117
[connection signal="body_entered" from="View" to="." method="_on_view_body_entered"]
[connection signal="body_exited" from="View" to="." method="_on_view_body_exited"]
